[metadata]
name = pvecontrol
version = 0.0.1
author = Laurent Corbes
author_email = laurent.corbes@enix.fr
description = Proxmox VE control
long_description = file: README.md
licence = GPLv3

[options]
python_requires= >=3.7
package_dir=
    =src
packages=find:
include_package_data = True
install_requires = file: requirements.txt

[options.packages.find]
where=src

[options.package_data]
* = *.yaml

[options.entry_points]
console_scripts =
    pvecontrol = pvecontrol.pvecontrol:main
